[metadata]
name = AudioFusion
version = 0.1.2
author = Zarox
author_email = mineiszarox@gmail.com
description = Enhance your music experience – effortlessly add immersive 8D, slowed, and reverb effects to any song.
keywords = music, reverb, slowed, 8d, editor, python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MineisZarox/AudioFusion
license = MIT
project_urls = 
	Bug Tracker = https://github.com/MineisZarox/AudioFusion
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8
install_requires = 
	pydub
	SoundFile
	pedalboard

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

